[package]
name = "ed15r"
version = "0.1.0"
authors = ["Tobias Kronthaler <kronthto@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash_hasher = "2.0.3"
wasm-bindgen = "0.2.70"

